@@ -35,7 +35,7 @@ namespace UnitTests
         [TestMethod]
         public void Test1()
         {
-            tslCompiler.Variables.Add("x");
+           // tslCompiler.Variables.Add("x");
 
             Assert.AreEqual("pow(x,2)+cos(pow(x,2*x+1.1+cos(x)))+2/3.0",
                 tslCompiler.TransformToCSharp("x²+cos(x²˙ˣ⁺¹ॱ¹⁺ᶜᵒˢ⁽ˣ⁾)+2/3"), "Fail!!!");
@@ -44,7 +44,7 @@ namespace UnitTests
         [TestMethod]
         public void Test6()
         {
-            tslCompiler.Variables.Add("x");
+        //    tslCompiler.Variables.Add("x");
 
             Assert.AreEqual("pow(2,103213.323232)", tslCompiler.TransformToCSharp("2¹⁰³²¹³ॱ³²³²³²"), "Fail!!!");
         }
@@ -59,7 +59,7 @@ namespace UnitTests
         [TestMethod]
         public void Test3()
         {
-            tslCompiler.Variables.AddRange(new[] {"x", "y", "z"});
+//            tslCompiler.Variables.AddRange(new[] {"x", "y", "z"});
 
             Assert.AreEqual("z*x*y+pow(y,x*z*y+11*x+cos(x/y))",
                 tslCompiler.TransformToCSharp("z·x·y+yˣ˙ᶻ˙ʸ⁺¹¹˙ˣ⁺ᶜᵒˢ⁽ˣ˸ʸ⁾"), "Fail!!!");
@@ -75,7 +75,7 @@ namespace UnitTests
         [TestMethod]
         public void Test5()
         {
-            tslCompiler.Variables.Add("x");
+        //    tslCompiler.Variables.Add("x");
 
             Assert.AreEqual("(pow(10,2)*x)/(1.0*((10-6*pow(x,2)+pow((25-pow(x,2)),2)+10*(25-pow(x,2)))))",
                 tslCompiler.TransformToCSharp("(10²·x)/(10-6·x²+(25-x²)²+10·(25-x²))"), "Fail!!!");
@@ -84,7 +84,7 @@ namespace UnitTests
         [TestMethod]
         public void Test7()
         {
-            tslCompiler.Variables.Add("i");
+       //     tslCompiler.Variables.Add("i");
 
             Assert.AreEqual("pow((cos(1.0)),i)",
                 tslCompiler.TransformToCSharp("(cos(1.0))ⁱ"), "Fail!!!");
@@ -93,7 +93,7 @@ namespace UnitTests
         [TestMethod]
         public void IntegerNumberRaisedToThePowerImaginaryUnitTest()
         {
-            tslCompiler.Variables.Add("i");
+     //       tslCompiler.Variables.Add("i");
 
             Assert.AreEqual("pow(2,i)",
                 tslCompiler.TransformToCSharp("2ⁱ"), "Fail!!!");
@@ -123,7 +123,7 @@ namespace UnitTests
         [TestMethod]
         public void LongCustomVariableRaisedToLongCustomVariablePlusComplicatedExpressionsTest()
         {
-            Assert.AreEqual("2*cos(csaksah+chssss)/pow(chiEnergy,hahaha)-pow(complicated_variableVar,thisiscomplicatedreally)+2*cos(csaksah+chssss)/pow(chiEnergy,hahaha)",
+            Assert.AreEqual("2*cos(csaksah+chssss)/pow(chiEnergy,hahaha)-pow(complicated_variableVar,thisiscomplicatedReally)+2*cos(csaksah+chssss)/pow(chiEnergy,hahaha)",
     tslCompiler.TransformToCSharp("2·cos(csaksah+chssss)/chiEnergyʰᵃʰᵃʰᵃ-complicated_variableVarᵗʰⁱˢⁱˢᶜᵒᵐᵖˡⁱᶜᵃᵗᵉᵈᴿᵉᵃˡˡʸ+2·cos(csaksah+chssss)/chiEnergyʰᵃʰᵃʰᵃ"), "Fail!!!");
         }
 
